# ggen-spec-kit

./: .coverage  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  ADVANCED_CACHE_SUMMARY.md  ADVANCED_TESTING_SUMMARY.md  AST_ANALYSIS_REPORT.md  ASYNC_IMPLEMENTATION_SUMMARY.md  BLUE_OCEAN_THESIS_HUMANS_AS_FAILURE_MODE.md  CLAUDE.md  COMPILER_DELIVERABLES.md  CONSTITUTIONAL_EQUATION.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATA_PROCESSING_SUMMARY.md  DELIVERABLES.md  DEPLOYMENT_SUMMARY.md  DIATAXIS_REORGANIZATION_PLAN.md  DOCUMENTATION_REFACTORING_SUMMARY.md  DSPY_LATEX_OPTIMIZER_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINAL_TEST_SUITE_REPORT.md  GAP_ANALYSIS.md  GGEN_API_ANALYSIS.md  GGEN_INTEGRATION_ROADMAP.md  GGEN_LOCAL_BUILD.md  GGEN_QUICKREF.md  INTEGRATION_SUMMARY.md  LATEX_COMPILER_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  MULTI_CLOUD_IMPLEMENTATION.md  MYPY_QUICK_REFERENCE.md  MYPY_REDUCTION_ARTIFACTS.md  MYPY_STRICT_REPORT.md  OBSERVABILITY_SUMMARY.md  OPTIMIZATION_COMPLETE.md  PLUGIN_SYSTEM_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  QUICK_REFERENCE.md  (+30 more)
.claude/: README.md  settings.json  settings.local.json.example
.claude-plugin/: plugin.json
.github/: markdown-link-check.json
deployment/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ADVANCED_CACHE_GUIDE.md  ADVANCED_OBSERVABILITY.md  ADVANCED_TESTING_GUIDE.md  ARCHITECTURE.md  AST_CODE_QUALITY_SYSTEM.md  ASYNC_INFRASTRUCTURE.md  ASYNC_MIGRATION_GUIDE.md  ASYNC_PATTERNS.md  CI_CD_WORKFLOWS.md  CLI_COMMANDS.md  CLOUD_ARCHITECTURE.md  CLOUD_EXAMPLES.md  COMMANDS.md  COMMAND_TEST_GENERATION.md  COMMAND_TEST_QUICKSTART.md  COMMAND_TEST_SYSTEM.md  CONSTITUTIONAL_EQUATION.md  COVERAGE_ANALYSIS.md  DATABASE_GUIDE.md  DATA_PROCESSING_GUIDE.md  DEFINITION_OF_DONE.md  DSPY_LATEX_INTEGRATION.md  ENHANCED_CONCLUSION_CHAPTER.tex  GAP_CLOSURE_SYNTHESIS.md  GGEN_INTEGRATION.md  GGEN_PHASE2_GUIDE.md  GGEN_PROJECT_SUMMARY.md  GGEN_QUICK_START.md  GGEN_RDF_README.md  GGEN_SETUP.md  GGEN_SYNC_ANALYSIS_README.md  GGEN_SYNC_FMEA.md  GGEN_SYNC_GAP_ANALYSIS.md  GGEN_SYNC_MASTER_ANALYSIS_REPORT.md  GGEN_SYNC_OPERATIONAL_RUNBOOKS.md  GGEN_SYNC_POKA_YOKE.md  GGEN_WORKFLOW_EXAMPLE.md  GIT_OPERATIONS.md  HYPERDIMENSIONAL_DASHBOARDS.md  HYPERDIMENSIONAL_QUICKSTART.md  (+55 more)
examples/: advanced_cache_benchmark.py  advanced_cache_integration.py  data_processing_benchmark.py  data_processing_integration.py  database_example.py  dspy_latex_example.py  dspy_latex_optimization_example.py  hyperdimensional_observability_demo.py  latex_observability_example.py  metrics_core_example.py  metrics_demo.py  ml_feature_engineering_demo.py  ml_optimization_demo.py  quickstart_validation.py  security_integration.py  validation_example.py  verify_dspy_latex.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
memory/: documentation.ttl  jtbd-customer-jobs.ttl  jtbd-example.ttl  jtbd-forces-analysis.ttl  philosophy.ttl  production-lifecycle.ttl
ontology/: agi-agent-schema.ttl  agi-reasoning.ttl  agi-task-planning.ttl  cli-command-shapes.ttl  cli-commands-agi.ttl  cli-commands-analytics.ttl  cli-commands-cloud.ttl  cli-commands-support.ttl  cli-commands-uvmgr.ttl  cli-commands.ttl  cli-schema.ttl  git-commands.ttl  jtbd-schema.ttl  jtbd-shapes.ttl  runtime-clustering.ttl  spec-kit-agi-schema.ttl  spec-kit-docs-extension.ttl  spec-kit-jtbd-extension.ttl  spec-kit-schema.ttl
schema/: cli-commands-uvmgr-full.ttl  specify-domain.ttl
scripts/: OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  README_OPTIMIZATIONS.md  THESIS_BUILDER.md  aggressive_suppress.py  analyze_imports.py  apply_optimizations.py  ast_code_quality.py  ast_violation_fixer.py  batch_type_fix.py  comprehensive_ruff_fixer.py  conservative_type_reducer.py  demo_hyperdimensional.py  demo_jtbd_runtime.py  final_fix_to_50.py  final_push_under_50.py  final_type_reduction.py  finish_reduction.py  fix_attr_defined_errors.py  fix_mypy_types.py  fix_quality.py  fix_raise_from.py  fix_undefined_names.py  hyper_advanced_type_fixer.py  master_fixer.py  master_type_reducer.py  optimize_cli_startup.md  pdf_generator.py  process_mypy_errors.py  profile_cli_startup.py  safe_violation_fixer.py  simple_suppress_to_target.py  strategic_type_ignores.py  targeted_violation_fixer.py  thesis_builder.py  validate-promises.sh  verify-constitutional-equation.sh  verify_optimizations.sh
sparql/: JTBD_QUERIES_README.md  agi-agent-extraction.rq  agi-reasoning-extraction.rq  agi-task-extraction.rq  changelog-query.rq  command-query.rq  command-test-query.rq  config-query.rq  extract-agi-commands.rq  extract-analytics-commands.rq  extract-cloud-commands.rq  extract-commands.rq  extract-options.rq  extract-parameters.rq  extract-runtime-clustering.rq  extract-runtime.rq  extract-support-commands.rq  guide-query.rq  jtbd-completion-rate.rq  jtbd-extract-jobs.rq  jtbd-feature-effectiveness.rq  jtbd-feature-impact.rq  jtbd-job-feature-mapping.rq  jtbd-outcome-achievement.rq  jtbd-outcome-metrics.rq  jtbd-painpoint-analysis.rq  jtbd-painpoint-coverage.rq  jtbd-persona-analysis.rq  jtbd-persona-journey.rq  jtbd-roi-calculation.rq  jtbd-satisfaction-trends.rq  jtbd-time-to-value.rq  principle-query.rq  validate-runtime-clustering.rq  workflow-query.rq
templates/: README.md  agi-agent-base.tera  agi-agent-implementer.tera  agi-agent-planner.tera  agi-agent-reasoner.tera  agi-agent-tester.tera  agi-command.tera  agi-decision-maker.tera  agi-exceptions.tera  agi-metrics.tera  agi-ops.tera  agi-orchestrator.tera  agi-planner.tera  agi-reasoner.tera  agi-runtime.tera  agi-synthesizer.tera  agi-types.tera  changelog.tera  cli-command.tera  command-test.tera  command.tera  configuration-reference.tera  constitution.tera  feature-outcome-card.tera  ggen.toml  guide.tera  jtbd-executive-summary.tera  jtbd-feature-impact.tera  jtbd-metrics-dashboard.tera  (+14 more)
tools/ggen-cli/: Cargo.toml
tools/ggen-cli/src/: main.rs
(+934 files in other folders)
