[project]
name = "specify-cli"
version = "0.0.23"
description = "Specify CLI, part of GitHub Spec Kit with RDF-first architecture. A tool to bootstrap your projects for Spec-Driven Development (SDD) using ggen v6 ontology-driven transformations."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "dspy>=2.5.0",
    "pm4py>=2.7.0",
    "pandas>=2.0.0",
]

# External system dependencies (must be installed separately):
# - ggen v6: RDF-first code generation engine
#   Install via: cargo install ggen
#   Or from source: https://github.com/seanchatmangpt/ggen

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.0.0",
    "rdflib>=7.0.0",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

